[package]
name = "GermiBoard"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
pixels = "0.13"
image = "0.25"
rand = "0.8"
rfd = "0.13"
eframe = "0.22"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

